# scorep_plugin_x86_energy

./: .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  README.md  TODO  x86_energy_plugin.c  x86_energy_plugin.cpp  x86_energy_sync_plugin.cpp
include/: x86_energy_measurement_thread.hpp  x86_energy_metric.hpp  x86_energy_plugin.hpp  x86_energy_sync_plugin.hpp
src/: x86_energy_measurement_thread.cpp  x86_energy_plugin.cpp  x86_energy_sync_plugin.cpp
test/: build.sh  run.sh  run_with_hdeem.sh  test.cpp
